--- a/SaaS/package.json
+++ b/SaaS/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.1"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.1",
+    "express-handlebars": "^3.0.0",
+    "mathjs": "^3.16.4",
+    "mongoose": "^4.12.3"
   }
 }
